# Ganit

./: .coverage  .gitignore  README.md  dev_script.py  example_script.py  example_script_2.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
nietzsche/: __init__.py  initial_condition.py  main.py  pde.py  reader.py  space.py  time.py  time_.py  utils.py  vib_ode.py
nietzsche/__pycache__/: vib_ode.py
test/: test_time.py
tests/: test_pde.py  test_space.py  test_time.py  test_utils.py
vibration_odes/: vib_ode.py
