[tool.poetry]
name = "nietzsche"
version = "0.1.0"
description = "python package to solve partial differential equations using finite difference method"
authors = ["Suman Saurabh <sumanan047@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20"
matplotlib = "^3.3"
imageio = "^2.9"
h5py = "^3.2"
mayavi = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
