[tool.poetry]
name = "nietzsche"
version = "0.1.0"
description = "python package to solve partial differential equations using finite difference method"
authors = ["Suman Saurabh <sumanan047@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.2.3"
matplotlib = "^3.8.4"
imageio = "^2.36.1"
h5py = "^3.11.0"
mayavi = "^4.8.2"
configobj = "^5.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
